--- a/src/index.njk
+++ b/src/index.njk
@@ -33,7 +33,8 @@ title: VMG PREMIER Builds
 <!-- slider Area End-->
 <!-- Services Area Start -->
 <div class="services-area1 section-padding30">
-  <div class="container">
+  <div
+    class="container">
     <!-- section tittle -->
     <div class="row">
       <div class="col-lg-12">
@@ -49,104 +50,100 @@ title: VMG PREMIER Builds
       <div class="col-xl-4 col-lg-4 col-md-6">
         <div class="single-service-cap mb-30">
           <div class="service-img">
-            <img src="/assets/img/service/Designing-Engineering.png" alt="" />
+            <a href="/services/design_and_engineering" class="more-btn">
+              <img src="/assets/img/service/Designing-Engineering.png" alt=""/>
+            </a>
           </div>
           <div class="service-cap">
             <h4>
-              <a href="/services/design_and_engineering"
-                >Designing &amp; Engineering</a
-              >
+              <a href="/services/design_and_engineering">Designing &amp; Engineering</a>
             </h4>
-            <a href="/services/design_and_engineering" class="more-btn"
-              >Read More
+            <a href="/services/design_and_engineering" class="more-btn">Read More
               <i class="ti-plus"></i>
             </a>
           </div>
           <div class="service-icon">
-            <img src="/assets/img/icon/services_icon1.png" alt="" />
+            <img src="/assets/img/icon/services_icon1.png" alt=""/>
           </div>
         </div>
       </div>
       <div class="col-xl-4 col-lg-4 col-md-6">
         <div class="single-service-cap mb-30">
           <div class="service-img">
-            <img src="/assets/img/service/Manufacturing.png" alt="" />
+            <a href="/services/manufacturing" class="more-btn">
+              <img src="/assets/img/service/Manufacturing.png" alt=""/>
+            </a>
           </div>
           <div class="service-cap">
             <h4>
               <a href="/services/manufacturing">Manufacturing</a>
             </h4>
-            <a href="/services/manufacturing" class="more-btn"
-              >Read More
+            <a href="/services/manufacturing" class="more-btn">Read More
               <i class="ti-plus"></i>
             </a>
           </div>
           <div class="service-icon">
-            <img src="/assets/img/icon/services_icon1.png" alt="" />
+            <img src="/assets/img/icon/services_icon1.png" alt=""/>
           </div>
         </div>
       </div>
       <div class="col-xl-4 col-lg-4 col-md-6">
         <div class="single-service-cap mb-30">
           <div class="service-img">
-            <img src="/assets/img/service/Logistic.jpg" alt="" />
+            <a href="/services/logistic" class="more-btn">
+              <img src="/assets/img/service/Logistic.avif" alt=""/>
+            </a>
           </div>
           <div class="service-cap">
             <h4>
               <a href="/services/logistic">Logistic</a>
             </h4>
-            <a href="/services/logistic" class="more-btn"
-              >Read More
+            <a href="/services/logistic" class="more-btn">Read More
               <i class="ti-plus"></i>
             </a>
           </div>
           <div class="service-icon">
-            <img src="/assets/img/icon/services_icon1.png" alt="" />
+            <img src="/assets/img/icon/services_icon1.png" alt=""/>
           </div>
         </div>
       </div>
       <div class="col-xl-4 col-lg-4 col-md-6">
         <div class="single-service-cap mb-30">
           <div class="service-img">
-            <img src="/assets/img/service/erection-installation.jpg" alt="" />
+            <a href="/services/erection_and_installation" class="more-btn">
+            <img src="/assets/img/service/erection-installation.jpg" alt=""/>
+            </a>
           </div>
           <div class="service-cap">
             <h4>
-              <a href="/services/erection_and_installation"
-                >Erection & Installation</a
-              >
+              <a href="/services/erection_and_installation">Erection & Installation</a>
             </h4>
-            <a href="/services/erection_and_installation" class="more-btn"
-              >Read More
+            <a href="/services/erection_and_installation" class="more-btn">Read More
               <i class="ti-plus"></i>
             </a>
           </div>
           <div class="service-icon">
-            <img src="/assets/img/icon/services_icon1.png" alt="" />
+            <img src="/assets/img/icon/services_icon1.png" alt=""/>
           </div>
         </div>
       </div>
       <div class="col-xl-4 col-lg-4 col-md-6">
         <div class="single-service-cap mb-30">
           <div class="service-img">
-            <img
-              src="/assets/img/service/Accessories-Components.png"
-              alt=""
-            />
+            <a href="/services/accessories_components" class="more-btn">
+            <img src="/assets/img/service/Accessories-Components.png" alt=""/>
+            </a>
           </div>
           <div class="service-cap">
             <h4>
-              <a href="/services/accessories_components"
-                >Accessories & Components</a
-              >
+              <a href="/services/accessories_components">Accessories & Components</a>
             </h4>
-            <a href="/services/accessories_components" class="more-btn"
-              >Read More
+            <a href="/services/accessories_components" class="more-btn">Read More
               <i class="ti-plus"></i>
             </a>
           </div>
           <div class="service-icon">
-            <img src="/assets/img/icon/services_icon1.png" alt="" />
+            <img src="/assets/img/icon/services_icon1.png" alt=""/>
           </div>
         </div>
       </div>
@@ -214,7 +211,7 @@ title: VMG PREMIER Builds
         <div class="single-service-cap mb-30">
           <div class="service-img">
             <a href="/services/logistic" class="more-btn">
-              <img src="/assets/img/service/Designing-Engineering.png" alt=""/>
+              <img src="/assets/img/service/Logistic.avif" alt=""/>
             </a>
           </div>
           <div class="service-cap">
