--- a/src/_includes/service_details.njk
+++ b/src/_includes/service_details.njk
@@ -1,60 +1,54 @@
 ---
 layout: base.html
 ---
-<div class="slider-area ">
-    <div
-        class="single-slider hero-overly slider-height2 d-flex align-items-center"
-        style="background-image: url('/assets/img/hero/about.jpg')">
-        <div class="container">
-            <div class="row">
-                <div class="col-xl-12">
-                    <div class="hero-cap pt-100">
-                        <h2>{{title}}</h2>
-                        <nav aria-label="breadcrumb ">
-                            <ol class="breadcrumb">
-                                <li class="breadcrumb-item">
-                                    <a href="/">Home</a>
-                                </li>
-                                <li class="breadcrumb-item">
-                                    <a href="/service">Services</a>
-                                </li>
-                                <li class="breadcrumb-item">
-                                    <a href="#">{{title}}</a>
-                                </li>
-                            </ol>
-                        </nav>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
 
-<!-- Project Details Section -->
-<section class="project-details section-padding30">
+<!-- slider Area Start-->
+<div class="slider-area">
+  <div
+    class="single-slider hero-overly slider-height2 d-flex align-items-center"
+    style="background-image: url('{{titleImg}}'); background-size: cover; background-position: center"
+  >
     <div class="container">
-        <div class="row">
-            <div class="col-12">
-                <div
-                    class="projectdetails1 ">
-                    <!-- Project Image -->
-                    <div class="projectdetails-img ">
-                        <img src="/assets/img/buildcomponents/10build.PNG" alt="buildings-with-mezzanines">
-                    </div>
-                </div>
-                <br>
-                <div class="project-description">
-                    <p>
-                        {{project_description}}
-                    </p>
-                </div>
-            </div>
+      <div class="row">
+        <div class="col-lg-10 col-xl-8">
+          <div class="hero-cap hero-cap2 pt-120">
+            <h2>{{title}}</h2>
+            <h3 style="color: antiquewhite">{{titleDescription}}</h3>
+          </div>
         </div>
-        <!-- Back Button -->
-        <div class="row">
-            <div class="col-lg-12">
-                <a href="/project/" class="btn ">Read More</a>
-            </div>
-        </div>
+      </div>
     </div>
-</section>
+  </div>
+</div>
+<!-- slider Area End-->
+<!-- Services Details Start -->
+<div class="services-details-area">
+  <div class="container">
+    <div class="row">
+      <div class="col-12">
+        <div class="single-services section-padding2">
+          <div class="details-img mb-40">
+            <img src="{{img}}" alt="Accessories and Additional Components" />
+          </div>
+          <div class="details-caption">
+            <p>{{description}}</p>
+
+            <h3>How can we help?</h3>
+
+            <ol style="padding-left: 20px; margin-bottom: 20px">
+              {% for item in accessories %}
+              <li style="margin-bottom: 10px; font-size: 16px; color: #333">
+                {{ item }}
+              </li>
+              {% endfor %}
+            </ol>
+            <p>
+              {{info}}
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<!-- Services Details End -->
