--- a/src/_includes/item_details.njk
+++ b/src/_includes/item_details.njk
@@ -9,7 +9,7 @@ layout: base.html
             <div class="row">
                 <div class="col-xl-12">
                     <div class="hero-cap pt-100">
-                        <h2>{{project_title}}</h2>
+                        <h2>{{title}}</h2>
                         <nav aria-label="breadcrumb ">
                             <ol class="breadcrumb">
                                 <li class="breadcrumb-item">
@@ -19,7 +19,7 @@ layout: base.html
                                     <a href="/project">Project</a>
                                 </li>
                                 <li class="breadcrumb-item">
-                                    <a href="#">{{project_title}}</a>
+                                    <a href="#">{{title}}</a>
                                 </li>
                             </ol>
                         </nav>
