--- a/src/index.njk
+++ b/src/index.njk
@@ -32,7 +32,7 @@ title: VMG PREMIER Builds
 </div>
 <!-- slider Area End-->
 <!-- Services Area Start -->
-<div class="services-area1 section-padding30">
+<div class="services-area1 section-padding">
   <div
     class="container">
     <!-- section tittle -->
@@ -151,126 +151,6 @@ title: VMG PREMIER Builds
   </div>
 </div>
 <!-- Services Area End -->
-<!-- About Area Start -->
-<div class="services-area1 section-padding30">
-  <div
-    class="container">
-    <!-- section tittle -->
-    <div class="row">
-      <div class="col-lg-12">
-        <div class="section-tittle mb-55">
-          <div class="front-text">
-            <h2 class="">Our Services</h2>
-          </div>
-          <span class="back-text">Services</span>
-        </div>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-xl-4 col-lg-4 col-md-6">
-        <div class="single-service-cap mb-30">
-          <div class="service-img">
-            <a href="/services/design_and_engineering" class="more-btn">
-              <img src="/assets/img/service/Designing-Engineering.png" alt=""/>
-            </a>
-          </div>
-          <div class="service-cap">
-            <h4>
-              <a href="/services/design_and_engineering">Designing &amp; Engineering</a>
-            </h4>
-            <a href="/services/design_and_engineering" class="more-btn">Read More
-              <i class="ti-plus"></i>
-            </a>
-          </div>
-          <div class="service-icon">
-            <img src="/assets/img/icon/services_icon1.png" alt=""/>
-          </div>
-        </div>
-      </div>
-      <div class="col-xl-4 col-lg-4 col-md-6">
-        <div class="single-service-cap mb-30">
-          <div class="service-img">
-            <a href="/services/manufacturing" class="more-btn">
-              <img src="/assets/img/service/Manufacturing.png" alt=""/>
-            </a>
-          </div>
-          <div class="service-cap">
-            <h4>
-              <a href="/services/manufacturing">Manufacturing</a>
-            </h4>
-            <a href="/services/manufacturing" class="more-btn">Read More
-              <i class="ti-plus"></i>
-            </a>
-          </div>
-          <div class="service-icon">
-            <img src="/assets/img/icon/services_icon1.png" alt=""/>
-          </div>
-        </div>
-      </div>
-      <div class="col-xl-4 col-lg-4 col-md-6">
-        <div class="single-service-cap mb-30">
-          <div class="service-img">
-            <a href="/services/logistic" class="more-btn">
-              <img src="/assets/img/service/Logistic.avif" alt=""/>
-            </a>
-          </div>
-          <div class="service-cap">
-            <h4>
-              <a href="/services/logistic">Logistic</a>
-            </h4>
-            <a href="/services/logistic" class="more-btn">Read More
-              <i class="ti-plus"></i>
-            </a>
-          </div>
-          <div class="service-icon">
-            <img src="/assets/img/icon/services_icon1.png" alt=""/>
-          </div>
-        </div>
-      </div>
-      <div class="col-xl-4 col-lg-4 col-md-6">
-        <div class="single-service-cap mb-30">
-          <div class="service-img">
-            <a href="/services/erection_and_installation" class="more-btn">
-            <img src="/assets/img/service/erection-installation.jpg" alt=""/>
-            </a>
-          </div>
-          <div class="service-cap">
-            <h4>
-              <a href="/services/erection_and_installation">Erection & Installation</a>
-            </h4>
-            <a href="/services/erection_and_installation" class="more-btn">Read More
-              <i class="ti-plus"></i>
-            </a>
-          </div>
-          <div class="service-icon">
-            <img src="/assets/img/icon/services_icon1.png" alt=""/>
-          </div>
-        </div>
-      </div>
-      <div class="col-xl-4 col-lg-4 col-md-6">
-        <div class="single-service-cap mb-30">
-          <div class="service-img">
-            <a href="/services/accessories_components" class="more-btn">
-            <img src="/assets/img/service/Accessories-Components.png" alt=""/>
-            </a>
-          </div>
-          <div class="service-cap">
-            <h4>
-              <a href="/services/accessories_components">Accessories & Components</a>
-            </h4>
-            <a href="/services/accessories_components" class="more-btn">Read More
-              <i class="ti-plus"></i>
-            </a>
-          </div>
-          <div class="service-icon">
-            <img src="/assets/img/icon/services_icon1.png" alt=""/>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-<!-- About Area End -->
 
 <!-- contact with us Start -->
 <section class="contact-with-area" data-background="assets/img/gallery/section-bg2.jpg">
